# Imervue

./: .bandit  .codacy.yaml  .gitignore  .mcp.json  .readthedocs.yaml  CLAUDE.md  LICENSE  PLUGIN_DEV_GUIDE.md  README.md  THIRD_PARTY_LICENSES.md  dev.toml  dev_requirements.txt  nuitka.md  puppet_guide.md  puppet_guide.zh-CN.md  puppet_guide.zh-TW.md  pyinstaller.md  pyproject.toml  requirements.txt  sonar-project.properties  stable.toml  user_guide.md  user_setting.json
.claude/agents/: qt-headless-ci-guard.md
.github/workflows/: Imervue_dev_3_10.yml  Imervue_dev_3_11.yml  Imervue_dev_3_12.yml  Imervue_stable_3_10.yml  Imervue_stable_3_11.yml  Imervue_stable_3_12.yml  release.yml  test.yml
Imervue/: Imervue_main_window.py  __main__.py  cli.py  integration_guide.py  main_window.py  user_setting.json
Imervue/desktop_pet/: __init__.py  click_sfx.py  command_parser.py  edge_snap.py  fullscreen_detector.py  hotkey_conflicts.py  hotkey_manager.py  idle_minigame.py  llm_dialogue.py  music_rhythm.py  obs_event_hook.py  pet_canvas_drivers.py  pet_context_menu.py  pet_drivers.py  pet_feature_base.py  pet_features.py  pet_interaction.py  pet_placement.py  pet_registry.py  pet_script.py  pet_script_editor.py  pet_shadow.py  pet_shadow_controller.py  pet_window.py  pet_workspace.py  schedule_rules.py  settings.py  speech_bubble.py  tray_icon.py  twitch_chat_hook.py  webhook_server.py  windows_notification_hook.py
Imervue/export/: __init__.py  cheat_sheet.py  contact_sheet.py  contact_sheet_layouts.py  gallery_sort.py  slideshow_effects.py  slideshow_mp4.py  web_gallery.py
Imervue/gpu_image_view/: browse_features.py  clipboard_paste.py  cull_actions.py  cvd_view_mode.py  deep_zoom_renderer.py  drop_handler.py  filmstrip.py  fit_view.py  gl_renderer.py  gpu_image_view.py  history_controller.py  hover_preview_binding.py  image_processing.py  input_controller.py  key_action_dispatcher.py  key_input_handler.py  memory_pressure.py  minimap.py  overlay_painter.py  pbo_uploader.py  prefetch_scheduler.py  signal_coalescer.py  status_info.py  texture_upload.py  tile_focus.py  tile_grid_renderer.py  tile_layout.py  tile_loader.py  tile_textures.py  video_badge.py  view_animator.py  view_nav.py  view_state.py  viewport_math.py  vram_budget.py  vram_detect.py  worker_pools.py
Imervue/gui/: _apply_save.py  advanced_filter_dialog.py  ai_upscale_dialog.py  anaglyph_dialog.py  animation_edit_dialog.py  annotation_canvas.py  annotation_dialog.py  annotation_models.py  auto_color_balance_dialog.py  auto_straighten_dialog.py  auto_tag_dialog.py  batch_convert_dialog.py  batch_export_dialog.py  before_after_dialog.py  binarize_dialog.py  bookmark_dialog.py  breadcrumb_bar.py  calendar_view_dialog.py  channel_mixer_dialog.py  clahe_dialog.py  clone_stamp_dialog.py  collage_dialog.py  colormap_dialog.py  command_palette.py  contact_sheet_dialog.py  crop_straighten_dialog.py  culling_dialog.py  deflicker_dialog.py  defringe_dialog.py  detail_equalizer_dialog.py  develop_panel.py  develop_presets_dialog.py  distort_dialog.py  dither_dialog.py  dual_image_view.py  dual_pane_dialog.py  duplicate_detection_dialog.py  emboss_dialog.py  events_dialog.py  exif_editor.py  (+98 more)
Imervue/image/: anaglyph.py  animation_edit.py  annotations.py  auto_color_balance.py  auto_straighten.py  batch_move_planner.py  binarize.py  caption.py  channel_mixer.py  clahe.py  clone_stamp.py  collage.py  colormap.py  copy_move.py  crop_geometry.py  curves.py  deflicker.py  defringe.py  dehaze.py  denoise.py  detail_equalizer.py  develop_presets.py  distort.py  dither.py  ela.py  emboss.py  equirectangular.py  export_presets.py  face_detection.py  false_color.py  film_grain.py  film_negative.py  filmic_tonemap.py  flatten_field.py  focus_peaking.py  focus_stack.py  frequency_separation.py  frosted_glass.py  geo_keywords.py  geometry.py  (+69 more)
Imervue/macros/: __init__.py  macro_manager.py  macro_step_validator.py
Imervue/mcp_server/: __init__.py  __main__.py  completion.py  logging.py  notifications.py  progress.py  prompts.py  resources.py  server.py  tool_schemas.py  tools.py
Imervue/menu/: extra_tools_menu.py  file_menu.py  filter_menu.py  language_menu.py  modify_menu.py  plugin_menu.py  recent_menu.py  right_click_menu.py  sort_menu.py  tip_menu.py
Imervue/multi_language/: chinese.py  english.py  japanese.py  korean.py  language_wrapper.py  traditional_chinese.py  translation_validation.py
Imervue/paint/: __init__.py  action_recorder.py  action_recorder_dialog.py  adjustments.py  animation.py  animation_dock.py  animation_export.py  animation_timeline.py  auto_base_color.py  auto_correct.py  auto_region_fill.py  auto_save.py  autosave.py  bezier_path.py  binary_layer.py  bleed_guides.py  blend_if.py  blend_modes.py  blur.py  brush_cursor.py  brush_dynamics.py  brush_engine.py  brush_kind_preview.py  brush_preset_dialog.py  brush_preset_io.py  (+146 more)
README/: README_de.md  README_es.md  README_fr.md  README_ja.md  README_ko.md  README_pt-BR.md  README_ru.md  README_zh-CN.md  README_zh-TW.md
docs/: conf.py  index.rst  requirements.txt
exe/: auto_py_to_exe_config.json  start_Imervue.py  user_setting.json
packaging/: CROSS_PLATFORM.md  build_appimage.sh
tests/: _qt_skip.py  _toast_spy.py  conftest.py  start_Imervue.py  test_advanced_filter.py  test_ai_colorize.py  test_ai_denoise.py  test_ai_object_remove.py  test_ai_object_remove_sam.py  test_ai_outpaint.py  test_ai_upscale.py  test_album_io.py  test_anaglyph.py  test_animation_edit.py  test_animation_player.py  test_annotation.py  test_annotation_dialog.py  test_app_paths.py  test_apply_save.py  test_auto_color_balance.py  test_auto_cull.py  test_auto_region_fill.py  test_auto_straighten.py  test_auto_tag.py  test_batch_convert.py  test_batch_move_planner.py  test_batch_ops.py  test_before_after_dialog.py  test_binarize.py  test_blend_modes.py  test_bookmark.py  test_breadcrumb.py  test_breadcrumb_navigate_toast.py  test_browse_features.py  test_brush_preset_dialog.py  test_calendar_index.py  test_caption.py  test_capture_time.py  test_catmull_rom_spline.py  test_channel_mixer.py  (+589 more)
(+251 files in other folders)
