# Rename to dev version
# This is dev version
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Imervue"
version = "1.0.20"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
dependencies = [
    "PySide6==6.11.0", "qt-material", "Pillow", "PyOpenGL", "numpy", "rawpy", "imageio", "PyOpenGL_accelerate"
]
description = "Imervue, Image + Immerse + View"
requires-python = ">=3.10"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/JeffreyChen-s-Utils/Imervue"
Code = "https://github.com/JeffreyChen-s-Utils/Imervue"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages]
find = { namespaces = false }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]